--- a/requirements.txt
+++ b/requirements.txt
@@ -1,130 +1,26 @@
 scancode-toolkit==31.0.1
-APScheduler==3.10.1
-attrs==22.1.0
-backports.zoneinfo==0.2.1
-banal==1.0.6
-beartype==0.14.1
 beautifulsoup4==4.11.1
-binaryornot==0.4.4
-boolean.py==4.0
-cachetools==5.3.3
-certifi==2024.2.2
-cffi==1.15.1
-chardet==5.2.0
-charset-normalizer==2.0.12
-click==8.1.7
-colorama==0.4.6
 commoncode==31.2.1
-container-inspector==33.0.0
-crc32c==2.4
-cryptography==42.0.7
-DBUtils==1.3
-debian-inspector==31.1.0
-dockerfile-parse==2.0.1
-dparse2==0.7.0
-dukpy==0.3.1
-dulwich==0.22.1
-extractcode==31.0.0
-extractcode-7z==16.5.210531
-extractcode-libarchive==3.5.1.210531
-fasteners==0.19
-feedparser==6.0.11
-filelock==3.12.2
-fingerprints==1.0.3
-fros==1.1
-ftfy==6.1.1
-gemfileparser==0.8.0
-gitdb==4.0.11
-GitPython==3.1.27
-google-api-core==2.19.0
-google-auth==2.29.0
-googleapis-common-protos==1.63.0
-gpg==1.14.0
-grimoirelab-toolkit==0.1.12
-grpcio==1.62.2
-html5lib==1.1
-idna==3.7
-importlib-metadata==6.7.0
-intbitset==3.1.0
-isodate==0.6.1
+grimoirelab_toolkit==0.1.12
 isort==5.10.1
-jaraco.functools==3.7.0
-javaproperties==0.8.1
-jinja2==3.1.4
 jsonpath==0.82
-jsonstreams==0.6.0
-license-expression==30.2.0
-lxml==5.2.2
-MarkupSafe==2.1.5
-more-itertools==9.1.0
-normality==2.5.0
-numpy==1.21.6
-packageurl-python==0.15.0
-packaging==21.3
-packvers==21.5
-parameter-expansion-patched==0.3.1
-pdfminer.six==20221105
-pefile==2023.2.7
 perceval==0.17.17
-perceval-weblate==0.1.2
-pip==20.2.2
-pip-requirements-parser==32.0.1
-pkginfo2==30.0.0
-pluggy==1.2.0
-plugincode==31.0.0b1
-ply==3.11
-progress==1.6
-proto-plus==1.23.0
-protobuf==4.24.4
-publicsuffix2==2.20191221
-pyahocorasick==2.0.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycairo==1.19.1
-pycparser==2.21
-pygmars==0.8.0
-pygments==2.17.2
-PyGObject==3.36.1
-PyJWT==2.8.0
-pymaven-patch==0.3.2
+perceval_weblate==0.1.2
 PyMySQL==0.9.3
-pyOpenSSL==24.1.0
-PyPAC==0.16.4
-pyparsing==2.4.7
-python-dateutil==2.9.0.post0
-python-rpm-spec==0.11
-pytz==2024.1
 PyYAML==6.0
-rarfile==4.0
-rdflib==6.3.2
 requests==2.26.0
-requests-file==2.1.0
-rpm==4.15.1
-rsa==4.9
-saneyaml==0.6.0
-scanoss==1.12.3
 scipy==1.7.1
-semantic-version==2.10.0
 setuptools==58.1.0
-sgmllib3k==1.0.0
-six==1.16.0
-smmap==5.0.1
-soupsieve==2.4.1
-spdx-tools==0.7.0a3
 SQLAlchemy==1.3.24
-text-unidecode==1.3
-tldextract==4.0.0
-toml==0.10.2
 tornado==6.1
 tqdm==4.62.3
-typecode==30.0.1
-typecode-libmagic==5.39.210531
-typing-extensions==4.7.1
-tzlocal==5.1
-uritools==4.0.2
 urllib3==1.25.8
-urlpy==0.5
-wcwidth==0.2.13
-webencodings==0.5.1
-xmltodict==0.13.0
-zipp==3.15.0
+python-rpm-spec==0.11
+rarfile==4.0
+GitPython==3.1.27
+DBUtils==1.3
+packaging==21.3
+spdx-tools==0.7.0a3
+attrs==22.1.0
+APScheduler==3.10.1
+pdfminer.six==20221105 
