--- a/src/reposca/config/Licenses.yaml
+++ b/src/reposca/config/Licenses.yaml
@@ -1810,9 +1810,9 @@ Software Licenses:
     identifier: CC-BY-ND-3.0
     fsfApproved: 'N'
     osiApproved: 'N'
-    oeApproved: 'N'
+    oeApproved: 'Y'
     ohApproved: 'N'
-    lowRisk: 'Y'
+    lowRisk: 'N'
     black: 'N'
     blackReason: ''
     exception: 'N'
@@ -1835,9 +1835,9 @@ Software Licenses:
     identifier: CC-BY-ND-4.0
     fsfApproved: 'N'
     osiApproved: 'N'
-    oeApproved: 'N'
+    oeApproved: 'Y'
     ohApproved: 'N'
-    lowRisk: 'Y'
+    lowRisk: 'N'
     black: 'N'
     blackReason: ''
     exception: 'N'
