add docker file

--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,16 @@
 !index.pyc
 /target/
 .vscode/*
-test/
-src/reposca/tempJson/
-src/reposca/tempSrc/
-src/reposca/temp/
+issue-scanner/test/
+issue-scanner/src/reposca/tempJson/
+issue-scanner/src/reposca/tempSrc/
+issue-scanner/src/reposca/temp/
 */__pycache__/
 *.csv
-src/repoSig.py
-src/reposca/csvtest.py
+issue-scanner/src/repoSig.py
+issue-scanner/src/reposca/csvtest.py
 .VSCodeCounter
-src/reposca/json.txt
-src/reposca/cleanData.py
-src/reposca/config/Regular.yaml
-src/token.yaml
-src/org.yaml
-src/temporg.yaml
+issue-scanner/src/reposca/json.txt
+issue-scanner/src/reposca/cleanData.py
+issue-scanner/src/reposca/config/Regular.yaml
+issue-scanner/src/temporg.yaml
